welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:16: error: not found: value T
		T(i-1)=getCouleurSol();
                ^Array1:14: error: type mismatch;
 found   : Unit
 required: Array[java.awt.Color]
	for (i <- 1 to hauteur)
               ^