welcome.lessons.welcome.array.basics.Array1.scala.code

var hauteur:Int= getMondeHauteur();
override def run() {
var T = new Array[Color](hauteur);
getMotif();
}
gauche(); 
avance();
droite();
avance(2);
def getMotif():Array[Color] =
{
	for (i <- 1 to hauteur)
	{
		T(i-1)=getCouleurSol();
		avance();
	} 	 
}


